--- a/package.json
+++ b/package.json
@@ -1,8 +1,4 @@
 {
-  "name": "portfolio-backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "lint-staged": {
     "src/**/*.ts": "yarn lint-prettier"
   },
@@ -46,5 +42,11 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1"
-  }
+  },
+  "name": "college-backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/MajharolTanvir/Portfolio-website-backend.git",
+  "author": "MajharolTanvir <majharul5456@gmail.com>",
+  "license": "MIT"
 }
